<resources>
    <string name="app_name">Ticket Validator</string>
    <string name="action_settings">Settings</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_re_enter_password">Re-enter Password</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_address">Address</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>

    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
</resources>
